--- a/src/ViewiApp/Components/Partials/Navbar/Navbar.html
+++ b/src/ViewiApp/Components/Partials/Navbar/Navbar.html
@@ -11,7 +11,7 @@
 
   <div class="navbar-menu" class.is-active="$open">
     <div class="navbar-start">
-      <a class="navbar-item" href="/search">Search</a>
+      <a class="navbar-item" href="/catalog">Catalog</a>
     </div>
   </div>
 </nav>
