--- a/public/css/misc.css
+++ b/public/css/misc.css
@@ -3,3 +3,12 @@
     overflow-y: hidden;
     white-space: nowrap;
 }
+
+.page {
+    max-height: 82vh;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    object-fit: contain;
+}
